<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignup.HomeScreen"
    android:background="@color/white"
    android:padding="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo">
        </ImageView>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/background"></ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/app_heading"
            android:textColor="@color/black"
            android:textSize="20sp">
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/signin_button"
                android:onClick="signinPage"
                android:text="@string/sign_in"
                app:backgroundTint="#FF9800" />
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@color/orange"
                android:onClick="signupPage"
                android:text="@string/sign_up"
                app:backgroundTint="#FF9800"
                app:iconTint="#FFFFFF" />
    </LinearLayout>
        <ImageView
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:src="@drawable/belowbackground"/>
    </LinearLayout>
</ScrollView>